@@ -1,15 +1,15 @@
 <!--#include virtual="header.inc"-->
 <h2>Documentation</h2>
 <h3>Reference Manual</h3>
-<p>The reference manual is autogenerated by the doxygen utility from comments in the source code, and documents all of the classes in xlw.  The information has been updated for version 3.  The manual is available from the downloads page or may be browsed online at the link below:</p>
+<p>The reference manual is autogenerated by the doxygen utility from comments in the source code, and documents all of the classes in XLW.  The manual is available from the downloads page or may be browsed online at the link below:</p>
 <br>
 <p><a href='http://192.168.2.157/xlw/refman/'>http://xlw.sourceforge.net/refman/</a></p>
-<h3>Design Document for xlw Version 2</h3>
-<p>Includes a description of the InterfaceGenerator module which parses the header files of your application and autogenerates the source code for the corresponding xlw Excel addin.  All of the information remains relevant for version 3, and the document has been updated to reflect changes in path names etc.  This document is available from the downloads page or may be browsed online at the link below:</p>
+<h3>Design Document for XLW Version 2</h3>
+<p>Includes a description of the InterfaceGenerator module which parses the header files of your application and autogenerates the source code for the corresponding XLW Excel addin.  All of the information remains relevant for version 3, and the document has been updated to reflect changes in path names etc.  This document is available from the downloads page or may be browsed online at the following link:</p>
 <br>
 <p><a href='http://192.168.2.157/xlw/version2/'>http://xlw.sourceforge.net/version2/</a></p>
-<h3>Design Document for xlw Version 3</h3>
-<p>Includes an overview of the enhancements made in support of Excel 2007's new features.  This document has been added to the reference manual and may be found online at the following link:</p>
+<h3>Design Document for XLW Version 3</h3>
+<p>Includes an overview of the enhancements made in support of Excel 2007's new features.  This document has been added to the reference manual and may be found online at the link below:</p>
 <br>
 <p><a href='http://192.168.2.157/xlw/refman/version3.html'>http://xlw.sourceforge.net/refman/version3.html</a></p>
 <!--#include virtual="footer.inc"-->
