@@ -4,7 +4,7 @@
 
 <html>
 <head>
-	<title>xlw - A C++ Wrapper for Excel</title>
+	<title>XLW - A C++ Wrapper for Excel</title>
 	<meta http-equiv='Content-Style-Type' content='text/css' />
     <!--HeaderText--><style type='text/css'><!--
   ul, ol, pre, dl, p { margin-top:0px; margin-bottom:0px; }
@@ -59,15 +59,15 @@ a.varlink { text-decoration:none; }
                 <!--PageLeftFmt-->
                 <div id='sidebar'><ul><li><a class='wikilink' href='index.shtml'>Home</a>
 </li><li><a class='wikilink' href='project.shtml'>Project</a>
+</li><li><a class='wikilink' href='documentation.shtml'>Documentation</a>
 </li><li><a class='wikilink' href='license.shtml'>License</a>
 </li><li><a class='wikilink' href='history.shtml'>History</a>
 <!--p class='vspace'></p-->
-</li><li><a class='wikilink' href='documentation.shtml'>Documentation</a>
 </li></ul><p class='vspace'></p>
 </div>
 
 <div id="ntlogo"><a class="imglink" href="http://www.nazcatech.be"><img src="images/nazcatech.jpg" width="88" height="98" border="0" alt="nazcatech"/></a></div>
-<div id="sflogo"><a class="imglink" href="http://sourceforge.net"><img src="images/sflogo.php" width="88" height="31" border="0" alt="SourceForge.net Logo"/></a></div>
+<div id="sflogo"><a class="imglink" href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=45222&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo"/></a></div>
 
                 <!--/PageLeftFmt-->
             </div>
