@@ -1,19 +1,0 @@
-
-The convention for the names of the CVS branches is Rxxyyzzln where:
-R stand for Release
-xx is the major number
-yy is the minor number
-zz is the minor-minor number
-l  can be a,b,f for alpha, beta, final respectively
-n  is an ordinal number
-
-e.g. R010100f0 stands for Release 1.1.0f0
-e.g. R010101a0 stands for Release 1.1.1a0
-
-The current version number is 3.0.0b0 - 030000b0
-This version number is in:
-    xlw/xlw.nsi,
-    xlw/Docs/xlw.doxy,
-    xlw/dev_tools/version_number.txt,
-    xlw/xlw/EXCEL32_API.h
-
