@@ -1,0 +1,34 @@
+
+/*!
+
+\page conventions Conventions
+
+\section conv_vernum Version Numbers
+
+The convention for XLW version numbers is xx.yy.zzln where:
+
+xx is the major number \n
+yy is the minor number \n
+zz is the minor-minor number \n
+l  can be a, b, or f for alpha, beta, final \n
+n  is an ordinal number \n
+
+The corresponding branch in the subversion repository is named
+Rxxyyzzln-branch, where R stands for release.  For example, here is the link
+to the branch in the subversion repository that corresponds to XLW release
+2.0.0f0:
+
+<a href="http://xlw.svn.sourceforge.net/viewvc/xlw/branches/R020000f0-branch/">http://xlw.svn.sourceforge.net/viewvc/xlw/branches/R020000f0-branch/</a>
+
+\section conv_binaries Binary Names
+
+When XLW is compiled, the resulting binaries - lib files and XLLs - are named
+according to the conventions specified by the boost project:
+
+<a href="http://www.boost.org/more/getting_started/windows.html#library-naming">http://www.boost.org/more/getting_started/windows.html#library-naming</a>
+
+For example, when you compile XLW version 3.0.0 using VC9 solution file
+xlw/build/vc9/xlw.sln, the output file is xlw/lib/xlw-vc90-mt-3_0_0.lib.
+
+*/
+
