@@ -18,14 +18,18 @@
 <td align="middle" width="33%">
 <strong>Hosted by</strong><br>
 <a href="http://sourceforge.net">
-<img src="http://sourceforge.net/sflogo.php?group_id=45222" width="88" height="31"
-border="0" alt="SourceForge.net Logo"></a>
+<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=45222&amp;type=1" width="88" height="31"
+border="0" alt="SourceForge.net Logo" /></a>
 </td>
 <td align="middle" width="33%">
+<!--
 <strong>Documentation generated by</strong><br>
 <a href="http://www.stack.nl/~dimitri/doxygen/index.html">
-<img src="doxygen.gif" alt="doxygen" align="middle" border=0 width=100 height=45>
-</a></td>
+<img src="doxygen.gif" alt="doxygen" align="middle" border=0 width=100 height=45></a>
+-->
+<a href="http://www.nazcatech.be">
+<img src="nazcatech.jpg" width="88" height="98" border="0" alt="nazcatech logo"></a>
+</td>
 </tr>
 </table>
 </body>
